<resources>
    <string name="app_name">33联动医养融合</string>
    <string name="search">搜索</string>
    <string name="change">更改</string>


    <!--小鱼SDK-->
    <string name="dialog_kicked_out_security_key_invalid">您的登录认证已失效，请重新登录</string>
    <string name="nemo_circle">家庭圈</string>
    <string name="add_other">邀请通话</string>

    <string name="call_statistics_pvtx">vout</string>
    <string name="call_statistics_pvrx">vin</string>
    <string name="call_statistics_atx">aout</string>
    <string name="call_statistics_arx">ain</string>
    <string name="call_statistics_others">others</string>
    <string name="call_statistics_dba">dba</string>
    <string name="in_calling">正在通话中</string>
    <string name="incoming_call">邀请您视频通话&#8230;</string>
    <string name="dialog_alert_Known">知道了</string>
    <string name="camera_disabled">无法获取摄像头数据，请在手机应用权限管理中打开小鱼在家的摄像头权限。</string>
    <string name="audio_disabled">麦克风没有声音，请在手机应用权限管理中打开小鱼在家的录音权限。</string>

    <string name="video_status_as_low_local_bw">本地网络不稳定</string>
    <string name="video_status_as_low_local_hardware">系统忙，视频质量降低</string>
    <string name="video_status_as_low_local_remote">对方网络不稳定</string>
    <string name="video_status_network_error">网络不稳定，请稍候</string>
    <string name="video_status_local_wifi_issue">WiFi信号不稳定</string>
    <string name="call_to">视频通话邀请中&#8230;</string>
    <string name="cell_state_pstn_incall">通话中</string>
    <string name="call_no_video">网络不给力，暂时无法接收视频</string>

    <string name="MuteByUser">对方忙，暂时关闭视频</string>
    <string name="MuteByBWLimit">对方网络不稳定，无法传输视频</string>
    <string name="MuteByNoInput">对方未开启视频</string>
    <string name="MuteByConfMgmt">对方视频已被主持人关闭</string>
    <string name="call_video_mute">视频暂停</string>
    <string name="cell_state_audio_only_incall">语音通话</string>

    <string name="recording_text_stopped_no_nemo_exist">远端不是小鱼设备，无法录制</string>
    <string name="recording_text_stopped_expired">本次录制已达最大时长30分钟，录制自动停止</string>
    <string name="recording_text_stopped_nemo_no_space">您的小鱼存储空间不足，录制失败</string>
    <string name="recording_text_stopped_account_no_space">您的帐户空间不足，无法录制新的视频</string>
    <string name="recording_text_preparing">00:00</string>
    <string name="call_not_ready">暂时无法通话</string>
    <string name="call_disconnected">通话已结束</string>
    <string name="title_new_call">新呼叫</string>
    <string name="prompt_new_call">来自 %s 的呼叫</string>
    <string name="button_text_accept">接听</string>
    <string name="button_text_reject">拒绝</string>
    <string name="dialog_alert_title">提示</string>
    <string name="sure">确定</string>
    <string name="no_network_toast">当前无网络连接\n请检查您的网络设置</string>
    <string name="play_vod_network_toast">播放文件失败\n请检查您的网络设置</string>
    <string name="no_udp_package">当前网络UDP被禁用，无法通话，\n请联系网络管理员或切换其他网络</string>
    <string name="local_net_disconnect">网络异常，呼叫已断开</string>
    <string name="mcu_create_conf_fail">抱歉，呼叫失败，请再试一次</string>
    <string name="mcu_allocate_res_fail">抱歉，呼叫失败，请再试一次</string>
    <string name="mgw_allocate_res_fail">抱歉，呼叫失败，请再试一次</string>
    <string name="mgw_unailavle">抱歉，呼叫失败，请再试一次</string>
    <string name="meeting_not_exist">抱歉，呼叫失败，请再试一次</string>
    <string name="invalid_nemono">无效的小鱼号，请重新输入</string>
    <string name="user_not_allowed">对方小鱼不允许外人拨打，请与对方确认后再拨</string>
    <string name="confmgmt_kickout">您已被主持人请出会议</string>
    <string name="peer_not_found">对方不在线</string>
    <string name="dial_error_null_nemo_number">请输入小鱼号/会议号</string>
    <string name="dial_error_invalid_nemo_number">无效的号码，请重新输入</string>
    <string name="dial_error_nemo_number_error">号码不存在，请确认</string>
    <string name="dial_error_no_answer_nemo_number">对方小鱼无法接通，请稍后再试</string>
    <string name="dial_error_disturb_nemo_number">对方小鱼不可拨打，请与对方确认小鱼设置后再重试</string>
    <string name="dial_error_temp_unavailable">对方无法接通，请稍后再试</string>
    <string name="dial_nemo_number_prompt">您可以通过小鱼号直接呼叫小鱼\n对方接通后即可视频通话</string>
    <string name="peer_net_disconnect">远端网络异常，呼叫已断开</string>
    <string name="call_busy">对方忙，请稍后再试</string>
    <string name="temp_unavailable">抱歉，呼叫失败，请再试一次</string>
    <string name="call_time_out">对方没应答，请稍后再试</string>
    <string name="client_inter_error">抱歉，呼叫失败，请再试一次</string>
    <string name="muted_by_conf_manager">您已被主持人静音</string>
    <string name="unmuted_by_conf_manager">您已被主持人取消静音</string>
    <string name="recording_text_stopped_not_nemo">远端不是小鱼设备，无法录制</string>
    <string name="recording_text_stopped_local">您不能录制本地画面</string>
    <string name="call_buzzer_failed">远端不是小鱼，无法使用振铃</string>
    <string name="button_enter_audio_only_mode">已开启语音通话模式</string>
    <string name="button_enter_headphone_mode">已切换到听筒模式</string>
    <string name="capture_failed">截取照片失败，请重试</string>
    <string name="state_in_call">当前正在呼叫中</string>
    <string name="capture_saved">照片已保存到您的手机相册</string>
    <string name="call_howling_detected">已检测到回音，可能您离小鱼太近\n声音已自动关闭，如需打开请手动开启。</string>
    <string name="observer_howling_detected">您离小鱼太近，会产生回音，声音已自动关闭。</string>
    <string name="button_text_enable_voice">开启声音</string>
    <string name="button_text_hangup">挂断</string>
    <string name="button_switch_camera">切摄像头</string>
    <string name="button_switch_speaker">听筒</string>
    <string name="button_text_mute">静音</string>
    <string name="button_audio_only_mute">语音模式</string>
    <string name="button_minimize">图像缩小</string>
    <string name="button_text_record">录制</string>
    <string name="button_text_capture">抓图</string>
    <string name="button_text_buzzer">提醒</string>
    <string name="debug_btn_stats">stats</string>
    <string name="debug_btn_roster">roster</string>
    <string name="button_text_handup">举手发言</string>
    <string name="button_text_handdown">结束发言</string>
    <string name="speak_request_sent">发言请求已发送，请等待主持人同意</string>
    <string name="meeting_management_charimanmode_forcemute_tip">主持人已强制静音 \n如需发言，请点击“发言”按钮请求主持人同意</string>
    <string name="meeting_management_charimanmode_handup_accepted">主持人已允许您发言</string>
</resources>
