<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversation_toolbar_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/fecc_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/toolbar_right_layout"
        android:layout_marginRight="40dp"
        android:layout_centerVertical="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/fecc_control_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/bg_toolbar_fecc_pan"/>

        <ImageView
            android:id="@+id/fecc_control_bg_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:src="@drawable/fecc_left_bg"/>

        <ImageView
            android:id="@+id/fecc_control_bg_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:src="@drawable/fecc_right_bg"/>
        <ImageView
            android:id="@+id/fecc_control_bg_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:src="@drawable/fecc_up_bg"/>

        <ImageView
            android:id="@+id/fecc_control_bg_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:src="@drawable/fecc_down_bg"/>
        <ImageView
            android:id="@+id/fecc_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/toolbar_fecc_pan"/>

        <ImageButton
            android:id="@+id/fecc_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/fecc_left"
            />
        <ImageButton
            android:id="@+id/fecc_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/fecc_control_bg"
            android:background="@drawable/fecc_right"/>

        <ImageButton
            android:id="@+id/fecc_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/fecc_control_bg"
            android:background="@drawable/fecc_up"
            />
        <ImageButton
            android:id="@+id/fecc_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/fecc_control_bg"
            android:background="@drawable/fecc_down"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/top_area"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:background="@color/nemo_black_40">

        <TextView
            android:id="@+id/enable_voice_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:textSize="13sp"
            android:gravity="center_horizontal"
            android:text="@string/call_howling_detected"
            android:textColor="@color/ainemo_white"
            />
        <Button
            android:id="@+id/enable_voice"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_below="@+id/enable_voice_text"
            android:layout_centerInParent="true"
            android:layout_marginTop="9dp"
            android:text="@string/button_text_enable_voice"
            android:textColor="@color/ainemo_white"
            android:textSize="16sp"
            android:paddingBottom="2dp"
            android:background="@drawable/contact_detail_action_button_style"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/toolbar_top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="left|top">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            >
            <ImageButton
                android:id="@+id/endcall_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_button_hangup_style"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_text_hangup"
                android:textColor="@color/ainemo_white"
                android:layout_below="@+id/endcall_btn"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/switch_camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            >

            <ImageButton
                android:id="@+id/switch_camera"
                android:longClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_button_bg_style"
                android:scaleType="center"
                android:src="@drawable/ic_svc_toolbar_switch_camera"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_switch_camera"
                android:textColor="@color/ainemo_white"
                android:layout_below="@+id/switch_camera"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/switch_speaker_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            >
            <ImageButton
                android:id="@+id/switch_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_button_bg_style"
                android:scaleType="center"
                android:src="@drawable/ic_svc_toolbar_switch_speaker"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_switch_speaker"
                android:textColor="@color/ainemo_white"
                android:layout_below="@+id/switch_speaker"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/mic_mute_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            >
            <ImageButton
                android:id="@+id/mute_btn"
                android:longClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_button_bg_style"
                android:scaleType="center"
                android:src="@drawable/ic_toolbar_mic"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_text_mute"
                android:textColor="@color/ainemo_white"
                android:layout_below="@+id/mute_btn"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/handup_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            >
            <ImageButton
                android:id="@+id/handup_btn"
                android:longClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_toolbar_white_disabled"
                android:scaleType="center"
                android:src="@drawable/call_handup_button_style"
                />
            <TextView
                android:id="@+id/handup_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_text_handup"
                android:textColor="@color/ainemo_white"
                android:layout_below="@+id/handup_btn"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            >
            <ImageButton
                android:id="@+id/audio_only_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toolbar_button_bg_style"
                android:scaleType="center"
                android:src="@drawable/ic_toolbar_audio_only"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/button_audio_only_mute"
                android:textColor="@color/ainemo_white"
                android:layout_below="@+id/audio_only_btn"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/toolbar_right_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/nemo_black_40"
        android:gravity="right"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <ImageButton
                    android:id="@+id/addother_btn"
                    android:longClickable="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:scaleType="center"
                    android:background="#00000000"
                    android:src="@drawable/ic_toolbar_addother"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/add_other"
                    android:textColor="@color/ainemo_white"
                    android:layout_below="@+id/addother_btn"
                    android:textSize="11sp"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <ImageButton
                    android:id="@+id/recording_btn"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/ic_toolbar_recording"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/button_text_record"
                    android:textColor="@color/ainemo_white"
                    android:layout_below="@+id/recording_btn"
                    android:textSize="11sp"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <ImageButton
                    android:id="@+id/capture_btn"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/ic_toolbar_capture"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/button_text_capture"
                    android:textColor="@color/ainemo_white"
                    android:layout_below="@+id/capture_btn"
                    android:textSize="11sp"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <ImageButton
                    android:id="@+id/buzzer_btn"
                    android:longClickable="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:background="#00000000"
                    android:scaleType="center"
                    android:src="@drawable/ic_toolbar_buzzer"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/button_text_buzzer"
                    android:textColor="@color/ainemo_white"
                    android:layout_below="@+id/buzzer_btn"
                    android:textSize="12sp"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/call_duration_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#BFBFBF"
        android:textSize="12sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/stats_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/roster_btn"
        android:padding="10dp"
        android:text="@string/debug_btn_stats"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/roster_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/stats_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/save_dump"
        android:padding="10dp"
        android:text="@string/debug_btn_roster"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/save_dump"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/roster_btn"
        android:padding="10dp"
        android:text="save dump"
        android:visibility="invisible"/>

</RelativeLayout>